2003-04-10  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/Epson-CL_760.xml, printer/Epson-PM_740C.xml,
	  printer/Epson-PM_870C.xml, printer/Epson-PM_930C.xml,
	  printer/Epson-PM_3700C.xml: Added new japanese printer models.
	
2003-04-08  Till Kamppeter <till.kamppeter@gmx.net>

	* db/source/driver/lxm3200-tweaked.xml: Updated the download URLs.

2003-04-07  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/Minolta-magicolor_2200_DL.xml opt/foo2zjs-ColorMode.xml,
	  opt/foo2zjs-Copies.xml, opt/foo2zjs-Duplex.xml,
	  opt/foo2zjs-ICM.xml, opt/foo2zjs-InputSlot.xml,
	  opt/foo2zjs-Intent.xml, opt/foo2zjs-MediaType.xml,
	  opt/foo2zjs-Nup.xml, opt/foo2zjs-PageSize.xml,
	  opt/foo2zjs-Resolution.xml: Applied patch from Rick Richardson
	  to update the Foomatic data to the current state of the
	  "foo2zjs" driver.
	
2003-04-01  Till Kamppeter <till.kamppeter@gmx.net>

	* opt/pxlmono-PrintoutMode.xml: Corrected values of GSResolution
	  option.

2003-03-30  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/Epson-PM_970C.xml: Added Epson PM 970C printer.

	* opt/132.xml: Allowed uni-directional printing on the Lexmark Z31
	  with the "lxm3200-tweaked" driver and made this the default.

2003-03-27  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/100576.xml, printer/100704.xml, printer/101152.xml,
	  printer/101952.xml, printer/102080.xml, printer/102304.xml,
	  printer/105504.xml, printer/106848.xml, printer/108128.xml,
	  printer/108320.xml, printer/108896.xml, printer/109440.xml,
	  printer/110464.xml, printer/110624.xml, printer/111392.xml,
	  printer/112832.xml, printer/112864.xml, printer/113312.xml,
	  printer/113888.xml, printer/114016.xml, printer/114592.xml,
	  printer/114656.xml, printer/114816.xml, printer/115488.xml,
	  printer/116128.xml, printer/116256.xml, printer/117472.xml,
	  printer/121952.xml, printer/122016.xml, printer/122048.xml,
	  printer/122080.xml, printer/122336.xml, printer/122496.xml,