@@ -10,11 +10,11 @@
     </resolution>
     <consumables>
       <comments>
-        <en>just paper</en>
+        <en>Just thermal paper</en>
       </comments>
     <!--one or more "partno" elements.--></consumables>
   </mechanism>
-  <url>http://www.printrex.com/DL.htm</url>
+  <url>http://www.printrex.com/</url>
   <lang>
     <proprietary/><!--no pjl-->
     <text>
@@ -26,9 +26,15 @@
   <functionality>D</functionality><!--unknown preferred "driver"-->
   <unverified/><!--no "contrib_url"-->
   <comments>
-    <en>Data logging printer; prints on continuous roll thermal paper.
-&lt;br&gt;Prints text just fine, and the command set is fully documented.
-&lt;br&gt;It should be straightforward to write a Ghostscript driver for the
-two bitmap modes (100 and 200dpi).</en>
+    <en>
+
+    Data logging printer; prints on continuous roll thermal paper.&lt;p&gt;
+
+    Prints text just fine, and the command set is fully documented.&lt;p&gt;
+
+    It should be straightforward to write a Ghostscript driver for the
+    two bitmap modes (100 and 200dpi).
+
+    </en>
   </comments>
 </printer>
