@@ -1,3 +1,7 @@
+2003-04-12  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* printer/Printrex-820_DL.xml: Fixed URL.
+
 2003-04-10  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* printer/Epson-CL_760.xml, printer/Epson-PM_740C.xml,
